[UI] Nuclio execution log - see active vs all replicas

--- a/src/nuclio/functions/version/version-code/function-event-pane/test-events-logs/test-events-logs.tpl.html
+++ b/src/nuclio/functions/version/version-code/function-event-pane/test-events-logs/test-events-logs.tpl.html
@@ -52,6 +52,6 @@
     </div>
     <div class="no-logs"
          data-ng-if="$ctrl.logs.length === 0">
-        {{ 'functions:NO_LOGS_HAVE_BEEN_FOUND' | i18next }}
+        {{ 'functions:NO_LOGS_WERE_FOUND' | i18next }}
     </div>
 </div>
